# market-regime-detector

./: .dockerignore  .gitignore  Jenkinsfile  pyproject.toml  requirements.txt
app/: main.py  metrics.py  schemas.py
app/db/: schema.py
app/models/: predictor.py
docker/: Dockerfile.app  Dockerfile.trainer  docker-compose.yml  entrypoint.trainer.sh
gitops/: argocd-app.yaml
k8s/: app-deployment.yaml
mlartifacts/: model.pkl
mlartifacts/1/0d6ff3a6187e4ae3893c410d9fccd990/artifacts/: label_encoder.pkl
mlartifacts/1/0d6ff3a6187e4ae3893c410d9fccd990/artifacts/random_forest_regime/: MLmodel
mlartifacts/1/0d6ff3a6187e4ae3893c410d9fccd990/artifacts/random_forest_regime/metadata/: conda.yaml
mlartifacts/1/ad3e375d72bd436cbfaf5a9081f11daa/artifacts/: class_mapping.json
mlartifacts/1/ad3e375d72bd436cbfaf5a9081f11daa/artifacts/random_forest_regime/: MLmodel
monitoring/: prometheus.yml
pipelines/dags/: ingest_ohlcv.py  retrain_model.py
pipelines/tasks/: data_sources.py  feature_engineering.py  fetch_data.py
tests/: test_api.py  test_features.py
training/: train.py
