[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name    = "market-regime-detector"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipelines*", "training*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths  = ["tests"]